--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ repositories {
 
 dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.2'
-    testImplementation 'org.seleniumhq.selenium:selenium-java:4.29.0'
-    testImplementation 'io.github.bonigarcia:webdrivermanager:5.9.3'
+    testImplementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.29.0'
+    testImplementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.9.3'
 }
 
 test {
